# AutoTessell

./: .dockerignore  .env.example  .gitignore  BENCHMARK_ANALYSIS_DETAILED.md  BENCHMARK_RESULTS_V0.4.md  CHANGELOG.md  CLAUDE.md  CODEX_PROMPT.md  CODEX_STANDALONE_PROMPT.md  CURRENT_SESSION_SUMMARY.md  CURRENT_STATUS_AND_BACKLOG.md  DEPENDENCY_VALIDATION_REPORT.txt  Dockerfile  E2E_FAILURE_ANALYSIS.md  E2E_TEST_RESULTS.json  GPU_ACCELERATION_REVIEW.md  GUI_V04_COMPLETION_REPORT.md  IMPROVEMENTS_V0.4.md  LICENSE  MESH_FORMAT_VALIDATION_REPORT.json  MESH_VIEWER_IMPROVEMENTS.md  Makefile  OWNERSHIP_DECISIONS.md  P2-V0.2-COMPLETION-REPORT.md  P2_V0.2_IMPLEMENTATION.md  PERFORMANCE_ANALYSIS.md  PERFORMANCE_REPORT.json  PERFORMANCE_REPORT.md  PHASE_DE_COMPLETION.md  PHASE_FE_COMPLETION_SUMMARY.md  PLAN.md  README.md  RELEASE_CHECKLIST.md  RELEASE_v0.3.md  SESSION-2026-04-11-FINAL-SUMMARY.md  SPEC.md  SPRINT_123_COMPLETION.md  TESTING.md  TEST_CASES_GUIDE.md  TEST_COUNTING_POLICY.md  (+18 more)
.claude/agents/: analyzer.md  desktop.md  evaluator.md  generator.md  preprocessor.md  strategist.md
.claude/commands/: harness-init.md  harness.md
.github/: pull_request_template.md
.github/workflows/: build_windows_binaries.yml  build_windows_installer.yml  common-checks.yml  release.yml  test.yml  windows-installer-test.yml  windows-release.yml  windows-smoke.yml
.gstack/qa-reports/: qa-manual-2026-04-19.md  qa-report-wildmesh-2026-04-19.md
.quadwild_test/: test_cube.stl  test_cube_p0.corners  test_cube_p0.feature  test_cube_p0.patch  test_cube_rem.rosy  test_cube_rem.sharp
agents/specs/: analyzer.md  evaluator.md  generator.md  open_source_roadmap.md  preprocessor.md  strategist.md
auto_tessell_core/: CMakeLists.txt  build_extensions.sh  cinolib_hex_bind.cpp  robusthex_bind.cpp
auto_tessell_core/fake_nanogui/nanogui/serializer/: core.h  sparse.h
b_aYczSLScZNH/: package-lock.json
b_aYczSLScZNH/app/: globals.css  layout.tsx  page.tsx
b_aYczSLScZNH/components/: log-tab.tsx  main-content.tsx  report-tab.tsx  sidebar.tsx  (+2 more)
backend/: Dockerfile.api  Dockerfile.worker  config.py  db.py  main.py  requirements.txt  version.py
cli/: main.py
core/: max_cells_policy.py  schemas.py  version.py
desktop/: README.md  __main__.py  qt_main.py  server.py
docs/: QA_CHECKLIST.md  bench_v04_beta27_drift.md
frontend/: package-lock.json  package.json
godot/: project.godot
installer/: AutoTessell_Setup.iss  Install-AutoTessell.ps1  autotessell.nsi  construct.yaml  environment.yml
reports/: balanced_fine_tiers_auto_remesh_results.csv  balanced_fine_tiers_auto_remesh_results.json  balanced_std_tiers_auto_remesh_results.csv  balanced_std_tiers_auto_remesh_results.json  balanced_std_tiers_auto_remesh_summary.json  debug_one_results.csv  debug_one_results.json  debug_one_summary.json  diverse_matrix_results.json  diverse_matrix_summary.json  fast_fine_netgen_retry2_check_results.csv  fast_fine_netgen_strict_check_results.json  fast_fine_netgen_strict_check_v2_results.csv  fast_fine_netgen_strict_check_v2_results.json  fast_fine_netgen_strict_check_v2_summary.json  fast_fine_netgen_visibility_check_results.csv  fast_fine_netgen_visibility_check_results.json  fast_fine_netgen_visibility_check_summary.json  fast_fine_snappy_timeoutfloor90_check_results.csv  fast_fine_snappy_timeoutfloor90_check_results.json  fast_fine_snappy_timeoutfloor_check_results.csv  fast_fine_snappy_timeoutfloor_check_results.json  fast_fine_snappy_timeoutfloor_check_summary.json  fast_fine_tetwild_iter_override_check_results.csv  fast_fine_tetwild_iter_override_check_results.json  fast_fine_tetwild_iter_override_check_summary.json  fast_fine_tetwild_retry2_check_results.csv  fast_fine_tetwild_retry2_check_results.json  fast_fine_tiers_auto_remesh_results.csv  fast_fine_tiers_auto_remesh_results.json  fast_fine_tiers_auto_remesh_summary.json  fast_fine_tiers_auto_remesh_v2_results.csv  fast_fine_tiers_auto_remesh_v2_results.json  fast_fine_tiers_auto_remesh_v3_results.csv  fast_fine_tiers_auto_remesh_v3_results.json  fast_fine_tiers_auto_remesh_v3_summary.json  fast_fine_tiers_auto_remesh_v4_results.csv  fast_fine_tiers_auto_remesh_v4_results.json  fast_fine_tiers_auto_remesh_v5_results.csv  fast_fine_tiers_auto_remesh_v5_results.json  (+59 more)
scripts/: benchmark_test_cases.py  build_windows.bat  check_version.py  debug_gui_wsl.sh  generate_advanced_test_cases.py  generate_test_cases.py  installer.iss  run_mesh_matrix.py  run_qt_headless_vnc.sh  validate_all_dependencies.py  validate_all_mesh_formats.py  validate_engine_profiles.py
tessell-mesh/: CMakeLists.txt  build.sh
tessell-mesh/build_make/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake
tessell-mesh/build_make/lib/: libgeogram.so.1
tessell-mesh/include/tessell/: mesh2d.hpp  mesh3d.hpp  of_writer.hpp  types.hpp
tessell-mesh/src/: bindings.cpp  mesh2d.cpp  mesh3d.cpp  of_writer.cpp
tessell-mesh/tests/: CMakeLists.txt  test_mesh2d.cpp  test_of_writer.cpp
test_cube_case/: generator_log.json  geometry_report.json  netgen_mesh.msh  preprocessed_report.json  quality_report.json
tests/: conftest.py  run_all_tiers.sh  run_all_tiers_cube.sh  run_single_tier.py  run_single_tier_cube.py  run_tier_check.py  run_tier_check2.py  run_tier_check3.py  test_analyzer.py  test_bc_writer.py  test_bench_drift.py  test_bench_v04_timeseries.py  test_bl_auto_activation.py  test_bl_numerical_quality.py  test_bl_phase2_report.py  test_cad_reader_native.py  test_case_writer.py  test_cli.py  test_cli_cross_engine_fallback.py  test_cli_flags_beta20_beta23.py  test_complexity_analyzer.py  test_core_surface_mesh.py  test_cross_engine_fallback.py  test_dependency_status.py  test_desktop_server.py  test_e2e_native_pipeline.py  test_engine_params_spec_native.py  test_errors.py  test_evaluator.py  test_fidelity_native_helpers.py  test_file_reader_native.py  test_generator.py  test_geometry_inside.py  test_gui_bl_phase2_config.py  test_gui_visual.py  test_harness_params.py  test_integration.py  test_kdtree.py  test_logging.py  test_mesh_exporter.py  (+48 more)
(+285 files in other folders)
