[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auto-tessell"
version = "1.0.0"
description = "CAD/메쉬 파일 → OpenFOAM polyMesh 자동 생성 CLI 도구"
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    # 핵심 CLI
    "click>=8.1",
    "rich>=13.0",
    "pydantic>=2.0",
    "structlog>=24.0",
    # 메쉬 처리
    "trimesh>=4.5",
    "meshio>=5.3",
    "numpy>=2.0",
    "scipy>=1.13",
    # 표면 전처리
    "pymeshfix>=0.16",
    "pyacvd>=0.3",
    "pyvista>=0.44",
    "pymeshlab>=2023.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
    "pytest-qt>=4.4",
    "httpx>=0.27",
    "black>=24.0",
    "ruff>=0.4",
    "mypy>=1.10",
]
cad = [
    "cadquery>=2.4",
]
netgen = [
    "netgen-mesher>=6.2",
]
desktop = [
    "PySide6>=6.8",
    "fastapi>=0.100",
    "uvicorn[standard]>=0.20",
    "python-multipart>=0.0.6",
    "websockets>=12.0",
]
volume = [
    "pytetwild>=0.2",
]
ai = [
    "torch>=2.0",
    "meshgpt-pytorch>=1.0",
]
# v0.2: Evaluator 강화
evaluator = [
    "neatmesh>=0.0.8",
    "Ofpp>=0.12",
]
# v0.3: Generator 확장
generator = [
    "meshpy>=2022.1",
    "classy-blocks>=0.6",
]
# v0.4: 케이스 자동화
case = [
    "foamlib>=1.0",
]
# v0.5: 전처리 강화
preprocess = [
    "mesh2sdf>=1.0",
    "fast-simplification>=0.1",
    "sdf>=0.3.7",
]
# 전체 설치 (AI/CAD 제외)
full = [
    "neatmesh>=0.0.8",
    "Ofpp>=0.12",
    "meshpy>=2022.1",
    "foamlib>=1.0",
    "mesh2sdf>=1.0",
    "fast-simplification>=0.1",
    "sdf>=0.3.7",
]

[project.scripts]
auto-tessell = "cli.main:cli"
auto-tessell-qt = "desktop.qt_main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "core*", "desktop*"]

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "requires_display: marks tests that require a display (skip in headless CI with '-k \"not requires_display\"')",
    "visual: marks GUI screenshot regression tests (skip with --skip-visual)",
]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
